# LLM_Document_bot

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  environment.yml  pyproject.toml
LLM_UI/: callbacks.py  chain_factory.py  custom_types.py  embedder.py  mvvm.py
templates/: html_template.py
test/: test_chain_factory.py  test_embedder.py  test_mvvm.py
